--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,8 +13,12 @@
     
 }
 
+header {
+    @apply bg-neutral-100;
+}
+
 body {
-    @apply bg-gradient-to-b from-gray-50 to-75%  ; 
+    @apply bg-neutral-400; 
 }
 /* Headers */
 h1 {@apply text-3xl text-center;}
@@ -24,17 +28,29 @@ h3 {@apply text-lg text-center;}
 
 /* Buttons */
 a {
-    @apply text-red-400 min-w-fit;
+    @apply text-red-400 container max-w-full whitespace-nowrap
+    justify-self-center 
+    border p-1 m-0.5
+    hover:bg-gradient-to-t hover:bg-amber-100 hover:to-50%;
 }
 
 button {
-    @apply text-red-400 min-w-fit cursor-pointer;
+    @apply text-red-400 whitespace-nowrap cursor-pointer 
+    container max-w-full justify-self-center 
+    border p-1
+    hover:bg-gradient-to-t hover:bg-amber-100 hover:to-50%;
 }
 
-
+main {
+    @apply justify-self-center 
+     min-h-screen max-h-fit min-w-8/10 max-w-9/10
+     p-5
+     bg-white
+     border-l-1 border-r-1 outline-2 shadow-xl shadow-neutral-600;
+}
 
 .content {
-    @apply container flex flex-col items-center  rounded-2xl p-5 m-10 border-2 max-w-5/10 ;
+    @apply container flex flex-col items-center  rounded-2xl p-5 m-5 border-2 max-w-5/10 ;
 }
 
     .content div {
@@ -67,18 +83,47 @@ button {
             @apply py-2 px-4 border-b text-center;
         }
 
+.cart {
+    @apply container flex flex-col gap-5 min-w-max items-center rounded-l-2xl  shadow-2xl p-10;
+}
+.cart-header {
+    @apply border
+    bg-white rounded-2xl p-2;
+}
+.product-card {
+    @apply flex flex-col justify-end p-1
+    min-h-fit max-w-50 min-w-fit
+    ;
+}
+    .product-card img {
+        @apply hover:size-full;
+    }
+.cart-footer {
+    @apply flex flex-col gap-2 border self-center text-center min-w-9/10 min-h-20 max-w-9/10 p-5 pb-10 rounded-2xl shadow-2xl outline-1 backdrop-blur-2xl;
+}
+
+.pagination-controls {
+    @apply flex flex-row max-w-fit justify-self-center
+}
 
 /* Forms */
 .form-content {
-    @apply container flex flex-col min-w-75 gap-5;
+    @apply max-w-7/10 self-center;
 }
 
-.form-group {
-    @apply flex flex-col;
+.form-group { 
+    @apply flex flex-col max-w-7/10 border-b-2 p-2;
 }
 
 .form-section {
-    @apply flex flex-col p-2 pb-4 border-b-1 border-dashed gap-2 justify-around text-center;
+    @apply flex flex-col p-2 pb-4 gap-2 justify-around text-center ;
+}
+
+.bi-column-section {
+    @apply flex flex-row justify-around min-w-full 
+    gap-10 p-5
+    self-center 
+    border-b-1 border-dashed;
 }
 
 .form-group-row {
